[package]
name = "led"
version = "0.1.0"
authors = ["Alex Crawford <led@code.acrawford.com>"]
edition = "2018"
description = "Various LED implementations built on the embedded-hal traits"
keywords = ["led", "embedded-hal", "embedded-hal-driver"]
license = "Apache-2.0"

[dependencies]
embedded-hal = "^0.2.0"
