[package]
name = "led"
version = "0.2.0"
authors = ["Alex Crawford <led@code.acrawford.com>"]
edition = "2018"
description = "Various LED implementations built on the embedded-hal traits"
keywords = ["led", "embedded-hal", "embedded-hal-driver"]
categories = [ "no-std", "embedded" ]
license = "Apache-2.0"
repository = "https://github.com/crawford/led"

[dependencies]
ascii = { version = "1.0.0", default-features = false, optional = true }
embedded-hal = { git = "https://github.com/crawford/embedded-hal", branch = "matrix" }
ignore-result = "0.2.0"
