[package]
name = "led"
version = "0.3.0"
authors = ["Alex Crawford <led@code.acrawford.com>"]
edition = "2018"
description = "Various LED implementations built on the embedded-hal traits"
keywords = ["led", "embedded-hal", "embedded-hal-driver"]
categories = [ "no-std", "embedded" ]
license = "Apache-2.0"
repository = "https://github.com/crawford/led"

[dependencies]
embedded-hal = "0.2.3"
